# sigmund_64bit-version

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  maxmspsdk.xcconfig  package-info.json.in
.github/workflows/: build_without_release.yml  main.yml  test.yml
sigmund~/: d_fft_mayer.c  sigmund~.c  sigmund~.maxhelp
sigmund~/sigmund~.mxo/Contents/: Info.plist
sigmund~/sigmund~.mxo/Contents/MacOS/: sigmund~
sigmund~/sigmund~.mxo/Contents/Resources/: maxmspsdk.xcconfig
sigmund~/sigmund~.xcodeproj/: project.pbxproj  vb.pbxuser  vb.perspectivev3
sigmund~/sigmund~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sigmund~/sigmund~.xcodeproj/project.xcworkspace/xcshareddata/: sigmund~.xccheckout
sigmund~/sigmund~.xcodeproj/project.xcworkspace/xcuserdata/vb.xcuserdatad/: UserInterfaceState.xcuserstate
sigmund~/sigmund~.xcodeproj/xcuserdata/vb.xcuserdatad/xcschemes/: max-external.xcscheme
source/projects/sigmund_tilde/: CMakeLists.txt  d_fft_mayer.cpp  sigmund_tilde--.cpp  sigmund_tilde.cpp
